test/ll_parser_bracketed_command_test.test
ERROR: in line 11: too few quoted names in:
parser define bracket "[+"
^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: in line 12: expected quoted name after:
parser define bracket "[+" ...
                           ^^^
parser print selectors:
    [ - parser, + code, - math, - text ]
parser define selector text
parser define selector operator 1
parser print selectors:
    [ - parser, + code, - math, - text, - operator 1 ]
ERROR: in line 17: unrecognized flag name:
parser define bracket "[+" ... "+]" [text, operator 2]
                                           ^^^^^^^^^^
ERROR: in line 18: expected `,' after:
parser define bracket "<+" ... "+>" [text + operator]
                                     ^^^^
parser define bracket "<+" ... "+>" [code, operator 1]
       with parsing selectors [^ code, - math, + operator 1]
       with full line
parser trace [ + subexpression lines,
               + subexpression elements]
======= TEST: parser test <+hi there+> <+hi [ embedded ] there+>
------- line 25:
parser test <+ hi there +> <+ hi [embedded] there +>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 25:
parser test <+ hi there +> <+ hi [embedded] there +>
            ^^^^^^^^^^^^^^
------- line 25:
parser test <+ hi there +> <+ hi [embedded] there +>
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
parser define bracket "[X" ... "X]" [code, operator 1]
       with parsing selectors [- code, + operator 1]
======= TEST: parser test [a [b c] c] [X a [ b c ] d X]
------- line 28:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 28:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
            ^^^^^^^^^^^^^^^
------- line 28:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
                ^^^^^^^
------- line 28:
parser test [ a [ b c ] c ] [X a [ b c ] d X]
                            ^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test this is a paragraph + :
                  line 1
                  line 2 a :: line 2 b;   line 2 c
                  last line

------- lines 29-32:
parser test this is a paragraph +:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- lines 29-32:
parser test this is a paragraph +:
                                 ^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- line 30:
    line 1
    ^^^^^^
------- line 31:
    line 2a:: line 2b; line 2c
    ^^^^^^^^^^^^^^^^^^
------- line 31:
    line 2a:: line 2b; line 2c
                       ^^^^^^^
------- line 32:
    last line
    ^^^^^^^^^
======= END TEST
parser define indentation mark "+:" ... "::" [code]
======= TEST: parser test this is a paragraph +:
                  line 1
                  line 2 a::   line 2 b ; line 2 c
                  last line

------- lines 34-37:
parser test this is a paragraph +:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- lines 34-37:
parser test this is a paragraph +:
                                ^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- line 35:
    line 1
    ^^^^^^
------- line 36:
    line 2a:: line 2b; line 2c
    ^^^^^^^^^
------- line 36:
    line 2a:: line 2b; line 2c
              ^^^^^^^^^^^^^^^^
------- line 37:
    last line
    ^^^^^^^^^
======= END TEST
parser define named bracket
    "<" ... "#" ... "|" ... "|" ... ">" [code]
======= TEST: parser test <X| hi there |>
------- line 40:
parser test  <X| hi there |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 40:
parser test  <X| hi there |X>
             ^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test <foo bar| hi <p> there |>
------- line 41:
parser test  <foo bar| hi <p> there |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 41:
parser test  <foo bar| hi <p> there |>
             ^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 41:
parser test  <foo bar| hi <p> there |>
                          ^^^
======= END TEST
======= TEST: parser test <X Y Z # 8| ho ho |>
------- line 42:
parser test  <X Y Z # 8| ho ho |X>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 42:
parser test  <X Y Z # 8| ho ho |X>
             ^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: missing named closing bracket "|>" inserted; line 43:
parser test  <X Y Z # 8| ho ho |X Y Z # 8>
                                          ^
======= TEST: parser test <X Y Z # 8| ho ho | X Y Z # 8 > |>
------- line 43:
parser test  <X Y Z # 8| ho ho |X Y Z # 8>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 43:
parser test  <X Y Z # 8| ho ho |X Y Z # 8>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: missing named closing bracket "|>" inserted; line 44:
parser test  <X Y Z : 8| ho ho |X Y Z : 8>
                                          ^
======= TEST: parser test <X Y Z : 8| ho ho | X Y Z : 8 > |>
------- line 44:
parser test  <X Y Z : 8| ho ho |X Y Z : 8>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 44:
parser test  <X Y Z : 8| ho ho |X Y Z : 8>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test <X Y Z # 8 # 8.64 T| ho ho |>
------- line 45:
parser test  <X Y Z # 8 # 8.64 T| ho ho |X Y>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 45:
parser test  <X Y Z # 8 # 8.64 T| ho ho |X Y>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: parser test <X Y Z (foo , bar) | ho ho |>
------- line 46:
parser test  <X Y Z (foo, bar)| ho ho |X Y>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 46:
parser test  <X Y Z (foo, bar)| ho ho |X Y>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: missing named closing bracket "|>" inserted; line 47:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
                                                        ^
======= TEST: parser test
               <X Y Z (foo , bar) | ho ho | X Y Z (foo , bar) > |>
------- line 47:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 47:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 47:
parser test  <X Y Z (foo, bar)| ho ho |X Y Z (foo, bar)>
                                             ^^^^^^^^^^
======= END TEST
ERROR: in line 48: unrecognized flag name:
parser trace [+ foo]
                ^^^
parser trace [+ parser commands]
parser trace [+ parser commands]
parser trace [+ warnings]
parser begin block 1
parser define bracket "<*" ... "*>" [code]
======= TEST: parser test <*hi there A*>
------- line 55:
parser test <* hi there A *>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 55:
parser test <* hi there A *>
            ^^^^^^^^^^^^^^^^
======= END TEST
ERROR: in line 56: innermost block name does not match `block x':
parser end block x
^^^^^^^^^^^^^^^^^^
======= TEST: parser test <*hi there B*>
------- line 57:
parser test <* hi there B *>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 57:
parser test <* hi there B *>
            ^^^^^^^^^^^^^^^^
======= END TEST
parser end block 1
======= TEST: parser test <* hi there C *>
------- line 59:
parser test <* hi there C *>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
ERROR: in line 60: not inside a block (no begin block to end):
parser end block 1
^^^^^^^^^^^^^^^^^^
parser define bracket "<|" ... "|>" [code]
======= TEST: parser test <|hi there D|>
------- line 62:
parser test <| hi there D |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 62:
parser test <| hi there D |>
            ^^^^^^^^^^^^^^^^
======= END TEST
parser begin block 1
parser undefine bracket "<|" ... "|>" [code]
======= TEST: parser test <| hi there E |>
------- line 65:
parser test <| hi there E |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
WARNING: in line 66: undefine found no definition:
parser undefine bracket "<|" ... "|>" [code]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
parser undefine bracket "<|" ... "|>" [code]
parser end block 1
======= TEST: parser test <|hi there F|>
------- line 68:
parser test <| hi there F |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 68:
parser test <| hi there F |>
            ^^^^^^^^^^^^^^^^
======= END TEST
parser undefine bracket "<|" ... "|>" [code]
======= TEST: parser test <| hi there F |>
------- line 70:
parser test <| hi there F |>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
WARNING: in line 71: undefine found no definition:
parser undefine bracket "<|" ... "|>" [code]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
parser undefine bracket "<|" ... "|>" [code]
